# GameOfLife1970

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Const.h  Cour.cpp  Cour.h  main.cpp
